--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
                 <div class="container">
                     <div class='flex justify-between gap-10 md1:flex-col-reverse md1:gap-5'>
                         <h1 class='text-5xl md1:text-3xl'>Задачи</h1>
-                        <button type='button' class='btn btn-reset ml-auto btn-primary' data-modal-path="create-task">
+                        <button type='button' class='btn btn-reset ml-auto btn-primary' data-create-modal-task>
                             <span class="btn-primary__text">
                                 Добавить задачу
                             </span>
@@ -58,11 +58,6 @@
             </section>
         </main>
     </div>
-
-    <div class="modal-container">
-        @include('./partials/popups/create-task.html')
-    </div>
-
 </body>
 
 
